--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -96,6 +96,71 @@
         "dedicated": "Dedicated support"
       }
     }
+  },
+  "usecases": {
+    "title": "Для кого это?",
+    "subtitle": "Решение для профессионалов в разных индустриях",
+    "items": {
+      "crypto": {
+        "title": "Крипто-трейдеры",
+        "description": "Мониторь 100+ крипто-каналов одновременно. Получай только релевантные сигналы за секунды."
+      },
+      "marketers": {
+        "title": "Маркетологи",
+        "description": "Автоматизируй поиск контента для репостов. Находи тренды раньше конкурентов."
+      },
+      "media": {
+        "title": "Медиа и журналисты",
+        "description": "Будь первым с новостями. Агрегируй информацию из 200+ источников за секунды."
+      },
+      "ecommerce": {
+        "title": "E-commerce",
+        "description": "Находи выгодные предложения и тренды раньше конкурентов. Автоматизируй поиск товаров."
+      },
+      "hr": {
+        "title": "HR и рекрутеры",
+        "description": "Находи таланты быстрее. Автоматизируй поиск кандидатов и мониторинг рынка труда."
+      },
+      "resellers": {
+        "title": "Реселлеры",
+        "description": "Не упускай выгодные сделки. Автоматизируй поиск товаров и услуг для перепродажи."
+      }
+    }
+  },
+  "cta": {
+    "title": "Готов автоматизировать мониторинг?",
+    "subtitle": "Начни с бесплатного тарифа навсегда. Без кредитной карты, без ограничений по времени.",
+    "stats": {
+      "free": "Бесплатно навсегда",
+      "noLimits": "Без ограничений",
+      "setup": "3 мин",
+      "setupLabel": "Настройка"
+    },
+    "button": "Начни сейчас",
+    "labels": {
+      "secure": "Безопасно",
+      "instant": "Мгновенный доступ",
+      "noCard": "Без кредитной карты"
+    }
+  },
+  "footer": {
+    "description": "Автоматизируй мониторинг Telegram-каналов. Получай только релевантную информацию в реальном времени.",
+    "product": {
+      "title": "Продукт",
+      "features": "Возможности",
+      "pricing": "Тарифы",
+      "try": "Попробовать"
+    },
+    "support": {
+      "title": "Поддержка",
+      "faq": "FAQ",
+      "bot": "Telegram бот",
+      "docs": "Документация",
+      "contact": "Связаться с нами"
+    },
+    "copyright": "© {{year}} Telegram Radar. Все права защищены.",
+    "privacy": "Политика конфиденциальности",
+    "terms": "Условия использования"
   }
 }
 
