--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -52,6 +52,26 @@
       }
     }
   },
+  "problems": {
+    "title": "Знакомая ситуация?",
+    "subtitle": "Превратим боль в эффективность",
+    "problemsTitle": "Проблемы",
+    "solutionsTitle": "Решения",
+    "items": {
+      "manual": "Необходимость мониторить 50+ каналов вручную",
+      "missed": "Пропуск важных сигналов и новостей",
+      "time": "Время на фильтрацию информации (10+ часов в день)",
+      "opportunities": "Упущенные возможности из-за задержки информации",
+      "competitors": "Невозможность отслеживать конкурентов в реальном времени"
+    },
+    "solutions": {
+      "automatic": "Автоматический мониторинг 100+ каналов одновременно",
+      "instant": "Мгновенные уведомления о важных событиях",
+      "savings": "Экономия 10-15 часов в неделю",
+      "first": "Первым узнавай о возможностях",
+      "analytics": "Real-time аналитика конкурентов"
+    }
+  },
   "pricing": {
     "title": "Выбери свой план",
     "subtitle": "Начни бесплатно. Масштабируйся по мере роста.",
@@ -161,6 +181,50 @@
     "copyright": "© {{year}} Telegram Radar. Все права защищены.",
     "privacy": "Политика конфиденциальности",
     "terms": "Условия использования"
+  },
+  "pages": {
+    "home": {
+      "title": "Telegram Radar - Мониторинг каналов на автопилоте",
+      "description": "Автоматизируй мониторинг Telegram-каналов. Получай только релевантные сообщения по ключевым словам. Экономь часы работы каждый день."
+    },
+    "faq": {
+      "title": "FAQ - Telegram Radar",
+      "description": "Часто задаваемые вопросы о Telegram Radar. Ответы на вопросы о мониторинге каналов, ключевых словах, тарифах и решении проблем."
+    },
+    "terms": {
+      "title": "Условия использования - Telegram Radar",
+      "description": "Условия использования сервиса Telegram Radar. Правила и ограничения использования сервиса."
+    },
+    "privacy": {
+      "title": "Политика конфиденциальности - Telegram Radar",
+      "description": "Политика конфиденциальности Telegram Radar. Информация о сборе, использовании и защите персональных данных."
+    },
+    "cases": {
+      "crypto": {
+        "title": "Крипто-трейдеры - Telegram Radar",
+        "description": "Автоматизируй мониторинг крипто-каналов. Получай сигналы о листингах, пампах и важных новостях первым."
+      },
+      "marketers": {
+        "title": "Маркетологи - Telegram Radar",
+        "description": "Автоматизируй поиск контента для репостов. Находи тренды раньше конкурентов."
+      },
+      "media": {
+        "title": "Медиа и журналисты - Telegram Radar",
+        "description": "Будь первым с новостями. Агрегируй информацию из 200+ источников за секунды."
+      },
+      "ecommerce": {
+        "title": "E-commerce - Telegram Radar",
+        "description": "Находи выгодные предложения и тренды раньше конкурентов. Автоматизируй поиск товаров."
+      },
+      "hr": {
+        "title": "HR и рекрутеры - Telegram Radar",
+        "description": "Находи таланты быстрее. Автоматизируй поиск кандидатов и мониторинг рынка труда."
+      },
+      "resellers": {
+        "title": "Реселлеры - Telegram Radar",
+        "description": "Не упускай выгодные сделки. Автоматизируй поиск товаров и услуг для перепродажи."
+      }
+    }
   }
 }
 
