--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -225,6 +225,116 @@
         "description": "Не упускай выгодные сделки. Автоматизируй поиск товаров и услуг для перепродажи."
       }
     }
+  },
+  "faq": {
+    "title": "Часто задаваемые",
+    "titleHighlight": "вопросы",
+    "subtitle": "Нашли ответы на самые популярные вопросы о Telegram Radar",
+    "contactSupport": "Связаться с поддержкой",
+    "notFound": "Не нашли ответ на свой вопрос?",
+    "sections": {
+      "general": {
+        "title": "Общие вопросы",
+        "items": {
+          "howItWorks": {
+            "question": "Как работает мониторинг каналов?",
+            "answer": "Принцип работы:\n1. Бот подключается к Telegram через API\n2. Отслеживает новые сообщения в указанных каналах\n3. Проверяет сообщения на совпадение с ключевыми словами (если настроены)\n4. Добавляет подходящие сообщения в очередь на публикацию\n5. Публикует сообщения в указанные каналы публикации\n\nТехнические детали:\n• Для публичных каналов используется общий мониторинговый аккаунт\n• Для приватных каналов требуется подключение личного аккаунта\n• Сообщения обрабатываются асинхронно через очередь Redis\n• Задержка между обработкой сообщений минимальна"
+          },
+          "channelsLimit": {
+            "question": "Сколько каналов можно мониторить?",
+            "answer": "Лимиты по тарифам:\n• Бесплатный: до 5 каналов мониторинга, до 10 ключевых запросов\n• Light: до 50 каналов, до 50 ключевых запросов\n• Medium: до 100 каналов, до 100 ключевых запросов\n• Hard: до 200 каналов, до 200 ключевых запросов\n• Rock: до 500 каналов, до 200 ключевых запросов\n\nЧто считается:\n• Каналы мониторинга (откуда берутся сообщения)\n• Каналы публикации (куда публикуются сообщения)\n• Общее количество = каналы мониторинга + каналы публикации"
+          },
+          "privateChannels": {
+            "question": "Можно ли мониторить приватные каналы?",
+            "answer": "Да, но с условиями:\n• Требуется подключение личного Telegram-аккаунта\n• Требуется платный тариф (Light, Medium, Hard, Rock)\n• Нужен доступ к каналу (подписка или invite-ссылка)\n\nКак добавить приватный канал:\n1. Подключите личный аккаунт\n2. Получите invite-ссылку на канал\n3. Отправьте invite-ссылку боту\n4. Бот автоматически подпишется на канал через ваш аккаунт\n\nОграничения:\n• Приватные каналы можно мониторить только через личный аккаунт\n• Бесплатный тариф не поддерживает приватные каналы\n• Уведомления от канала автоматически отключаются"
+          },
+          "speed": {
+            "question": "Как быстро приходят сообщения после публикации?",
+            "answer": "Скорость обработки:\n• Обычно сообщения публикуются в течение нескольких секунд после появления в исходном канале\n• Задержка зависит от нагрузки на сервер и очереди задач\n• В среднем: 5-30 секунд\n\nФакторы, влияющие на скорость:\n• Количество обрабатываемых сообщений\n• Нагрузка на сервер\n• Задержки Telegram API\n• Количество каналов мониторинга"
+          }
+        }
+      },
+      "keywords": {
+        "title": "Вопросы о ключевых словах",
+        "items": {
+          "howKeywordsWork": {
+            "question": "Как работают ключевые слова?",
+            "answer": "Принцип работы:\n1. Бот извлекает текст из сообщения\n2. Проверяет текст на совпадение с ключевыми словами\n3. Если найдено хотя бы одно совпадение - сообщение публикуется\n4. Если совпадений нет - сообщение не публикуется\n\nОсобенности:\n• Поиск не чувствителен к регистру (по умолчанию)\n• Поиск по части слова\n• Поиск по всему тексту сообщения\n\nПример:\nКлючевое слово: \"bitcoin\"\nСообщение: \"Bitcoin достиг нового максимума\"\nРезультат: ✅ Совпадение найдено"
+          },
+          "regex": {
+            "question": "Можно ли использовать регулярные выражения?",
+            "answer": "Текущая версия:\n• Регулярные выражения не поддерживаются\n• Все ключевые слова ищутся как обычный текст\n\nПланируется в будущих версиях:\n• Поддержка регулярных выражений\n• Опция \"Использовать regex\" при добавлении ключевого слова\n• Примеры: bitcoin|ethereum, \\d+, [A-Z]+"
+          },
+          "exactMatch": {
+            "question": "Как искать точное совпадение слова?",
+            "answer": "Текущая версия:\n• По умолчанию поиск по части слова\n• bitcoin найдет: \"bitcoin\", \"bitcoins\", \"cryptobitcoin\"\n\nПланируется в будущих версиях:\n• Опция \"Искать целое слово\"\n• bitcoin найдет только: \"bitcoin\", \"bitcoin.\", \"bitcoin,\", но не \"bitcoins\"\n\nВременное решение:\n• Используйте более специфичные ключевые слова\n• Комбинируйте несколько слов для точного поиска"
+          },
+          "caseSensitive": {
+            "question": "Учитывается ли регистр букв?",
+            "answer": "Текущее поведение:\n• По умолчанию поиск не чувствителен к регистру\n• bitcoin найдет: \"bitcoin\", \"Bitcoin\", \"BITCOIN\", \"BiTcOiN\"\n\nПланируется в будущих версиях:\n• Настройка чувствительности к регистру\n• Опция \"Учитывать регистр\" при добавлении ключевого слова"
+          }
+        }
+      },
+      "publishing": {
+        "title": "Вопросы о каналах публикации",
+        "items": {
+          "multipleChannels": {
+            "question": "Можно ли публиковать в несколько каналов одновременно?",
+            "answer": "Да:\n• Можно создать несколько каналов публикации\n• Каждый канал настраивается независимо\n• Одно сообщение может публиковаться в несколько каналов одновременно\n\nНастройка:\n• Каждый канал публикации настраивается отдельно\n• Можно использовать разные ключевые слова для разных каналов\n• Можно использовать разные форматы публикации"
+          },
+          "format": {
+            "question": "Какой формат публикации лучше использовать?",
+            "answer": "Forward (пересылка оригинала):\n✅ Сохраняет авторство и источник\n✅ Подписчики видят источник\n❌ Видно, что сообщение переслано\nИспользуйте для: новостных каналов, каналов с авторским контентом\n\nCopy (копипаст):\n✅ Сообщение выглядит как оригинальное\n✅ Можно скрыть источник\n❌ Теряется информация об авторе\nИспользуйте для: агрегаторов новостей, анонимных каналов\n\nРекомендация:\n• Для новостных каналов - Forward\n• Для агрегаторов - Copy с ссылкой на источник\n• Для анонимных каналов - Copy без ссылки"
+          },
+          "changeFormat": {
+            "question": "Можно ли изменить формат публикации после настройки?",
+            "answer": "Да:\n• Формат можно изменить в любой момент\n• Изменение применяется к новым сообщениям\n• Старые сообщения не изменяются\n\nКак изменить:\n1. Откройте настройки канала публикации\n2. \"🔍 Фильтр сообщений для постинга\"\n3. \"📄 Пересылка или копипаст\"\n4. Выберите новый формат"
+          }
+        }
+      },
+      "account": {
+        "title": "Вопросы о личном аккаунте",
+        "items": {
+          "security": {
+            "question": "Безопасно ли подключать личный аккаунт?",
+            "answer": "Безопасность:\n✅ Сессия хранится в зашифрованном виде\n✅ Пароль не хранится\n✅ Можно отключить сессию в любой момент\n✅ Сессия используется только для мониторинга каналов\n\nЧто делает бот:\n• Подписывается на каналы для мониторинга\n• Отключает уведомления от каналов\n• Читает сообщения из каналов\n• Не отправляет сообщения от вашего имени\n• Не изменяет настройки аккаунта\n\nРекомендации:\n• Используйте отдельный аккаунт для бота (если возможно)\n• Регулярно проверяйте активность аккаунта\n• Отключайте сессию, если больше не нужна"
+          },
+          "code": {
+            "question": "Что делать, если забыл код подтверждения?",
+            "answer": "Решения:\n1. Подождите несколько минут - код может прийти с задержкой\n2. Проверьте, что номер телефона указан правильно\n3. Попробуйте запросить новый код (если доступно)\n4. Убедитесь, что у вас есть доступ к Telegram на этом номере\n\nЕсли код не приходит:\n• Проверьте интернет-соединение\n• Убедитесь, что Telegram работает на вашем устройстве\n• Попробуйте перезапустить процесс подключения"
+          },
+          "multipleUsers": {
+            "question": "Можно ли использовать один аккаунт для нескольких пользователей?",
+            "answer": "Технически:\n• Один аккаунт можно подключить только к одному пользователю бота\n• При попытке подключить тот же аккаунт к другому пользователю предыдущая сессия отключится\n\nРекомендации:\n• Используйте отдельный аккаунт для каждого пользователя бота\n• Это обеспечивает безопасность и независимость настроек"
+          }
+        }
+      },
+      "troubleshooting": {
+        "title": "Решение проблем",
+        "items": {
+          "channelNotFound": {
+            "question": "Канал не найден",
+            "answer": "Возможные причины:\n• Неверный username канала\n• Канал удален или заблокирован\n• Канал приватный и нет доступа\n\nРешения:\n1. Проверьте правильность username (без @)\n2. Убедитесь, что канал существует и доступен\n3. Для приватных каналов - подключите личный аккаунт\n4. Попробуйте использовать полную ссылку: https://t.me/username"
+          },
+          "limitReached": {
+            "question": "Ошибка \"Достигнут лимит каналов\"",
+            "answer": "Причина:\n• Превышен лимит каналов для вашего тарифа\n\nРешения:\n1. Удалите неиспользуемые каналы\n2. Или выберите тариф с большим лимитом\n\nКак проверить лимит:\n1. Перейдите в \"💳 Лимиты\"\n2. Проверьте строку \"Каналы: X / Y\"\n3. X - текущее количество, Y - лимит"
+          },
+          "noMessages": {
+            "question": "Сообщения не приходят",
+            "answer": "Возможные причины:\n• Канал не добавлен в мониторинг\n• Не настроены ключевые слова (если используется фильтрация)\n• Канал удален или заблокирован\n• Проблемы с подключением\n\nРешения:\n1. Проверьте, что канал добавлен в список каналов мониторинга\n2. Проверьте настройки фильтрации (ключевые слова или репост всех)\n3. Убедитесь, что канал существует и доступен\n4. Проверьте интернет-соединение\n5. Перезапустите бота (команда /start)"
+          },
+          "notPublishing": {
+            "question": "Сообщения не публикуются в канал",
+            "answer": "Возможные причины:\n• Бот не является администратором канала\n• Недостаточно прав у бота\n• Канал удален или заблокирован\n• Не настроены каналы мониторинга\n\nРешения:\n1. Проверьте, что бот добавлен как администратор\n2. Проверьте права бота (должно быть \"Опубликовывать сообщения\")\n3. Убедитесь, что канал существует и активен\n4. Проверьте настройки каналов мониторинга\n5. Нажмите \"Проверить права\" в меню канала"
+          },
+          "keywordsNotWorking": {
+            "question": "Ключевые слова не работают",
+            "answer": "Возможные причины:\n• Ключевые слова не добавлены\n• Неправильное написание ключевых слов\n• Ключевые слова не применены к каналу публикации\n\nРешения:\n1. Проверьте список ключевых слов\n2. Убедитесь, что ключевые слова добавлены к каналу публикации\n3. Проверьте написание ключевых слов\n4. Попробуйте добавить ключевые слова заново"
+          }
+        }
+      }
+    }
   }
 }
 
